test/should-pass/pass/dk-va-init-on-direct-subklass-of-object/exe.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass k1
{
  method object-t va::init(object-t self, va-list-t args)
  {
    self = dk::va::init(super, args);
    //
    return self;
  }
}

int-t main()
{
  object-t o = make(k1::klass);
  USE(o);
  return 0;
}
