test/should-fail/absent-required-keyword/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass klass;

klass k1
{
  method object-t init(object-t self, void* #arg1, void** arg2 : nullptr)
  {
    self = dk::init(super);
    return self;
  }
}
klass k2
{
  method object-t init(object-t self)
  {
    self = dk::init(super);
    return self;
  }
}

int-t main()
{
  //object-t o = make(k1::klass, bogus : 42);
  object-t o = make(klass::klass);
  USE(o);
  return 0;
}
